--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -155,6 +155,7 @@ proc getState {state {valifundef {}} {catchinitproc 0}} {
             set value [{*}$initproclist]
          }
       # overridden value coming the command-line
+      ##nagelfar ignore Suspicious variable
       } elseif {[info exists ::asked_$state]} {
          set value [set ::asked_$state]
       }
@@ -267,6 +268,7 @@ proc getConf {option {valifundef {}}} {
                   }
                   {} {
                      # ignore non-valid values
+                     ##nagelfar ignore +3 Non static subcommand
                      if {[switch -- [llength $validvallist] {
                         0 {expr {1 == 1}}
                         1 {string is $validvallist -strict $::env($envvar)}
@@ -279,6 +281,7 @@ proc getConf {option {valifundef {}}} {
             }
 
             # overridden value coming the command-line (already validated)
+            ##nagelfar ignore Suspicious variable
             if {[info exists ::asked_$option]} {
                set value [set ::asked_$option]
             }
