--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -129,9 +129,11 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
    # parse argument list
    foreach arg $args {
       if {[info exists nextargisval]} {
+         ##nagelfar vartype nextargisval varName
          set $nextargisval $arg
          unset nextargisval
       } elseif {[info exists nextargisvaltosplit]} {
+         ##nagelfar vartype nextargisvaltosplit varName
          set $nextargisvaltosplit [split $arg :]
          unset nextargisvaltosplit
       } elseif {[info exists ignore_next_arg]} {
@@ -310,6 +312,7 @@ proc parseModuleCommandArgs {topcall cmd ignerr args} {
                   $::g_config_defs($outputconf) 3] (separated by ':')"
             }
          } else {
+            ##nagelfar ignore Suspicious variable name
             set ::asked_$outputconf $asked_output
          }
       }
@@ -880,6 +883,7 @@ if {[catch {
          lappend extraargv $arg
          unset nextargisextraargv
       } elseif {[info exists nextargisval]} {
+         ##nagelfar vartype nextargisval varName
          set $nextargisval $arg
          unset nextargisval
       } else {
