lint(ShellCheck): fix SC2046 warning
According to ShellCheck's documentation:

When command expansions are unquoted, word splitting and globbing will occur.
This often manifests itself by breaking when filenames contain spaces.

Related: https://www.shellcheck.net/wiki/SC2046
Related: #470

--- a/init/profile.sh.in
+++ b/init/profile.sh.in
@@ -7,7 +7,7 @@ if [ -n "${BASH:-}" ]; then
 elif [ -n "${ZSH_NAME:-}" ]; then
    shell=$ZSH_NAME
 else
-   shell=$(@BASENAME@ $(@PS@ -p $$ -ocomm=))
+   shell=$(@BASENAME@ "$(@PS@ -p $$ -ocomm=)")
 fi
 
 if [ -f "@initdir@/$shell" ]; then
