--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2798,6 +2798,9 @@ proc cmdModuleReset {} {
    }
 }
 
+proc cmdModuleStash {} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
