init: add stash subcmd to completion scripts

--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -157,6 +157,7 @@ _module() {
             'lint:Check syntax of modulefile'
             'mod-to-sh:Make shell code from modulefile env changes'
             'reset:Restore initial environment'
+            'stash:Save current environment and reset'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
