--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -83,6 +83,7 @@ complete module 'n/help/`_module_avail`/' \
         'n/lint/`_module_avail; echo "@comp_lint_opts@"`/' \
         'n/mod-to-sh/`_module_not_yet_loaded; echo "@comp_modtosh_opts@"`/' \
         "n/reset/n/" \
+        "n/stash/n/" \
         "n/--reset/(@comp_config_opts@)/" \
         'n/-h/n/' \
         'n/--help/n/' \
