ts: add stash sub-cmd tests

--- a/testsuite/modulefiles.3/tag/.modulerc
+++ b/testsuite/modulefiles.3/tag/.modulerc
@@ -147,3 +147,10 @@ if {[info exists env(TESTSUITE_TAG_OPT)]} {
         }
     }
 }
+if {[info exists env(TESTSUITE_STASH)]} {
+    switch -- $env(TESTSUITE_STASH) {
+        stash49 {
+            module-tag qux tag/8.0
+        }
+    }
+}
