--- a/testsuite/modulefiles.3/foo/.modulerc
+++ b/testsuite/modulefiles.3/foo/.modulerc
@@ -21,6 +21,14 @@ if {[info exists env(TESTSUITE_TAG_OPT)]} {
     }
 }
 
+if {[info exists env(TESTSUITE_STASH)]} {
+    switch -- $env(TESTSUITE_STASH) {
+        stash49 {
+            module-tag qux foo/1.0
+        }
+    }
+}
+
 if {[info exists env(TESTSUITE_RESET_NOW_FORBIDDEN)]} {
     module-forbid foo/0.2
 }
