--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -600,7 +600,7 @@ proc cmdModuleRestore {args} {
    # fetch collection content and differences compared current environment
    lassign [getDiffBetweenCurEnvAndColl $collfile $colldesc] coll_path_list\
       coll_mod_list coll_tag_arrser coll_nuasked_list mod_to_unload\
-      mod_to_load path_to_unuse path_to_use
+      mod_to_load path_to_unuse path_to_use is_tags_diff
    array set coll_tag_arr $coll_tag_arrser
 
    # create an eval id to track successful/failed module evaluations
